feat: start styles and division

--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/normalize.css">
+    <link rel="stylesheet" href="./style.css">
     <title>PISKEL</title>
 </head>
-<body>
-    
+<body class="full_wrapper">
+    <div class="inner_wrapper">
+        <header class="header">
+            <div class="header--navbar">
+                <ul class="header--navbar--list" id="first_navbar">
+                    <li class="header--navbar--list--item"><a href="#"></a></li>
+                    <li class="header--navbar--list--item"><a href="#"></a></li>
+                    <li class="header--navbar--list--item"><a href="#"></a></li>
+                </ul>
+            </div>
+            <div class="header--logo"><h1>CodeJam - Pallete</h1></div>
+            <div class="header--menu">
+                <ul>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+                <div class="header--menu--opened">
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </div>
+            </div>
+        </header>
+        <main></main>
+        <footer class="footer"></footer>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
