--- a/index.html
+++ b/index.html
@@ -33,22 +33,28 @@
         <main class="main_content">
             <div class="instrument_type">
                 <ul>
-                    <li>Paint bucket</li>
-                    <li>Choose color</li>
-                    <li>Move</li>
-                    <li>Transform</li>
+                    <li class="bucket"><a href="#">Paint bucket</a></li>
+                    <li class="choose"><a href="#">Choose color</li>
+                    <li class="move"><a href="#">Move</li>
+                    <li class="transform"><a href="#">Transform</li>
                 </ul>
             </div>
             <div class="instrument_color">
                 <ul>
-                    <li>Current color</li>
-                    <li>Prev color</li>
-                    <li>red</li>
-                    <li>blue</li>
+                    <li class="current"><a href="#">Current color</li>
+                    <li class="prev"><a href="#">Prev color</li>
+                    <li class="red"><a href="#">red</li>
+                    <li class="blue"><a href="#">blue</li>
                 </ul>
             </div>
             <div class="canvas"><canvas id="switcher">Your browser doesn't support canvas</canvas></div>
-            <div class="image_changer"></div>
+            <div class="image_changer">
+                <ul>
+                    <li class="small"><a href="#">4X4 pic</li>
+                    <li class="medium"><a href="#">32X32 pic</li>
+                    <li class="image"><a href="#">RSS logo</li>
+                </ul>
+            </div>
         </main>
     </div>
     <script src="./script.js"></script>
