feat: add last image; add links

--- a/index.html
+++ b/index.html
@@ -34,25 +34,27 @@
             <div class="instrument_type">
                 <ul>
                     <li class="bucket"><a href="#">Paint bucket</a></li>
-                    <li class="choose"><a href="#">Choose color</li>
-                    <li class="move"><a href="#">Move</li>
-                    <li class="transform"><a href="#">Transform</li>
+                    <li class="choose"><a href="#">Choose color</a></li>
+                    <li class="move"><a href="#">Move</a></li>
+                    <li class="transform"><a href="#">Transform</a></li>
                 </ul>
             </div>
             <div class="instrument_color">
                 <ul>
-                    <li class="current"><a href="#">Current color</li>
-                    <li class="prev"><a href="#">Prev color</li>
-                    <li class="red"><a href="#">red</li>
-                    <li class="blue"><a href="#">blue</li>
+                    <li class="current"><a href="#">Current color</a></li>
+                    <li class="prev"><a href="#">Prev color</a></li>
+                    <li class="red"><a href="#">red</a></li>
+                    <li class="blue"><a href="#">blue</a></li>
                 </ul>
             </div>
-            <div class="canvas"><canvas id="switcher">Your browser doesn't support canvas</canvas></div>
+            <div class="canvas">
+                <canvas id="switcher">Your browser doesn't support canvas</canvas>
+            </div>
             <div class="image_changer">
                 <ul>
-                    <li class="small"><a href="#">4X4 pic</li>
-                    <li class="medium"><a href="#">32X32 pic</li>
-                    <li class="image"><a href="#">RSS logo</li>
+                    <li id="canv_small" class="small"><a href="#switcher">4X4 pic</a></li>
+                    <li id="canv_medium" class="medium"><a href="#switcher">32X32 pic</a></li>
+                    <li id="canv_icon" class="icon"><a href="#switcher">RSS logo</a></li>
                 </ul>
             </div>
         </main>
