feat: change title name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/normalize.css">
     <link rel="stylesheet" href="./style.css">
-    <title>PISKEL</title>
+    <title>PISKEL-clone</title>
 </head>
 <body class="full_wrapper">
     <div class="inner_wrapper">
